Modified a dumb error i forgot on a DottedPath method
Idk why but i decided to use a non-existing method that was supposed to be named "removeFirst" on the Stack class...